--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ a:hover #img4, a:focus #img4  {
 <a href="https://www.colourlovers.com/">цветные любители<a/>
 <a herf="https://pythontutor.com/render.html#mode=display">Пайтон<a/>
 </body>
+</html>
 
 
 
